tests/error_display/test_hll_undeclared_variable_display.err.expected
error: at 3:21: [HTC-UndeclaredVariable] In function 'f': undeclared variable 'y'
   |
 3 |             let x = y;
   |                     ^
